Day 3 of learning Html,css and javascript

--- a/Html/t4.html
+++ b/Html/t4.html
@@ -31,7 +31,7 @@
 
         <div>
             <label for="car">Car</label>
-            <select name="Mycar" id="car">
+            <select name="Mycar" id="car" di>
                 <option value="BMW">BMW</option>
                 <option value="roll roys" selected>roll roys</option>
                 <option value="bbt">bbt</option>
