day 4 of learning Html,css and js

--- a/Html/t2.html
+++ b/Html/t2.html
@@ -6,9 +6,9 @@
     <title>Link and Images</title>
 </head>
 <body>
-    <a href="http://www.google.com" target="_blank">google</a>
+    <a href="http://www.google.com" target="_parent">google</a>
     <a href="http://www.amazon.com"target="_blank">amazon</a>
-    <a href="http://www.facebook.com"target="_blank">facebook</a>
-    <img src="demoImg.avif"alt="mountain">
+    <a href="http://www.facebook.com"target="_top">facebook</a>
+    <img src="demoImg.avif" alt="mountain" width="200px" height="200px">
 </body>
 </html>
